--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -5,7 +5,9 @@
   <title>LouKam Agency</title>
   <link rel="stylesheet" href="./travel_recommendation.css">
 </head>
-<body>
+<body background=
+"./background.jpg">
+
    <nav><h1>LouKam Travel Agency</h1>
 <ul>
   <li><a href="./travel_reco_home.html" id="home">Home </a></li>
@@ -18,3 +20,22 @@
 
 </ul>
 </nav>
+
+<div class="container">
+<div class="analysisForm">
+
+<h2>EXPLORE DREAM DESTINATION</h2>
+<p>It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.</p>
+<button id='btnBook'>BOOK NOW</button>
+
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Add font awesome icons -->
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
+
+<script src="./travel_recommendationndation.js"></
+script>
+</body>
+</html>
