--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 <nav class="navbar">
-<div class="logo">Loukam travel agency</div>
+<div class="logo">Loukam Travel Agency</div>
 <ul class="nav-links">
 <li><a href="travel_recommendation.html">Home</a></li>
 <li><a href="travel_recommendation_about.html">About Us</a></li>
