Add keyword search and recommendation results

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -23,6 +23,8 @@
 <button id="searchBtn">Search</button>
 <button id="clearBtn">Clear</button>
 </div>
+<div class="searchDestinations">
+    <div id="result"></div>
 </nav>
 </header>
 
