--- a/travel_recommendation_about.html
+++ b/travel_recommendation_about.html
@@ -3,73 +3,77 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Us - Loukam Travel Agency</title>
+<title>About Us - Loukam Travel</title>
+
 <link rel="stylesheet" href="travel_recommendation.css">
-<script defer src="travel_recommendation.js"></script>
-<!-- Icônes réseaux sociaux -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
+
+<!-- ================= NAVBAR ================= -->
 <header>
     <nav class="navbar">
+
         <div class="logo">Loukam Travel Agency</div>
+
         <ul class="nav-links">
             <li><a href="travel_recommendation.html">Home</a></li>
-            <li><a href="travel_recommendation_about.html" class="active">About Us</a></li>
+            <li><a href="travel_recommendation_about.html">About Us</a></li>
             <li><a href="travel_recommendation_contact.html">Contact Us</a></li>
         </ul>
+
     </nav>
 </header>
 
-<!-- ===== HERO SECTION ===== -->
-    <section class="about-hero">
-        <div class="overlay"></div>
-        <div class="about-content"
-            <h1>ABOUT US</h1>
-            <p>
-                Welcome to <strong>Loukam Travel Agency</strong>! We are a team of passionate travelers and professionals 
-                dedicated to providing the best travel experiences. Our goal is to help you explore the world, 
-                discover new cultures, and make unforgettable memories.
-            </p>
-            <p>
-                Our services include flight booking, hotel recommendations, and travel planning tailored to your needs. 
-                We believe that every journey should be meaningful, inspiring, and enriching.
-            </p>
-        </div>
-    </section>
+<!-- ================= HERO ABOUT ================= -->
+<section class="about-hero">
+    <div class="overlay"></div>
 
-    <!-- ===== TEAM SECTION ===== -->
-
-    <section class="team-section">
-        <h2>Our Team</h2>
-        <div class="team-container">
-            <div class="team-member">
-                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Pokam Nouadjien">
-                <h3>Pokam Nouadjien</h3>
-                <p class="role">CEO</p>
-                <p>Pokam oversees company strategy and ensures Loukam Travel Agency delivers top-quality experiences.</p>
-            </div>
-            <div class="team-member">
-                <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="Lou Nouadjien">
-                <h3>Lou Nouadjien</h3>
-                <p class="role">Team Lead</p>
-                <p>Lou manages the travel planning team and coordinates with partners to craft unique trips.</p>
-            </div>
-            <div class="team-member">
-                <img src="https://randomuser.me/api/portraits/men/68.jpg" alt="Mike Tyson">
-                <h3>Mike Tyson</h3>
-                <p class="role">Delivery Head</p>
-                <p>Mike ensures smooth operations and customer satisfaction across all TravelBloom services.</p>
-            </div>
-        </div>
-    </section>
-    <!-- ===== SOCIAL ICONS ===== -->
-
-    <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+    <div class="about-content">
+        <h1>ABOUT US</h1>
+        <p>
+            Welcome to <strong>Loukam Travel Agency</strong> — your gateway to unforgettable adventures.
+            Our mission is to help travelers discover breathtaking destinations and unique cultural experiences.
+        </p>
+        <p>
+            With years of expertise, we provide tailored travel recommendations that suit every taste:
+            beaches, temples, cities, nature, luxury, and more.
+        </p>
     </div>
+</section>
+
+<!-- ================= TEAM SECTION ================= -->
+<section class="team-section">
+
+    <h2>Our Team</h2>
+
+    <div class="team-container">
+
+        <div class="team-member">
+            <img src="https://i.pravatar.cc/150?img=12" alt="Team Member">
+            <h3>Lucas Martin</h3>
+            <p class="role">Founder & CEO</p>
+            <p>Passionate traveler helping people explore the world.</p>
+        </div>
+
+        <div class="team-member">
+            <img src="https://i.pravatar.cc/150?img=8" alt="Team Member">
+            <h3>Sarah Thompson</h3>
+            <p class="role">Travel Specialist</p>
+            <p>Expert in luxury travel and cultural tourism.</p>
+        </div>
+
+        <div class="team-member">
+            <img src="https://i.pravatar.cc/150?img=32" alt="Team Member">
+            <h3>David Kim</h3>
+            <p class="role">Experience Curator</p>
+            <p>Crafting unique travel experiences around the world.</p>
+        </div>
+
+    </div>
+
+</section>
+
 </body>
 </html>
