--- a/travel_recommendation_contact.html
+++ b/travel_recommendation_contact.html
@@ -3,56 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Us - TravelBloom</title>
+<title>Contact Us - Loukam Travel</title>
+
 <link rel="stylesheet" href="travel_recommendation.css">
-<script defer src="travel_recommendation.js"></script>
-<!-- Icônes réseaux sociaux -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
-<!-- ===== NAVBAR ===== -->
+
+<!-- ================= NAVBAR ================= -->
 <header>
-<nav class="navbar">
-<div class="logo">Loukam Travel Agency</div>
-<ul class="nav-links">
-<li><a href="travel_recommendation.html">Home</a></li>
-<li><a href="travel_recommendation_about.html">About Us</a></li>
-<li><a href="travel_recommendation_contact.html" class="active">Contact Us</a></li>
-</ul>
-</nav>
+    <nav class="navbar">
+
+        <div class="logo">Loukam Travel Agency</div>
+
+        <ul class="nav-links">
+            <li><a href="travel_recommendation.html">Home</a></li>
+            <li><a href="travel_recommendation_about.html">About Us</a></li>
+            <li><a href="travel_recommendation_contact.html">Contact Us</a></li>
+        </ul>
+
+    </nav>
 </header>
 
-<!-- ===== HERO SECTION ===== -->
+<!-- ================= CONTACT HERO ================= -->
 <section class="contact-hero">
-<div class="overlay"></div>
-<div class="contact-content">
-<h1>CONTACT US</h1>
-<p>Have questions, feedback, or need travel assistance? Fill out the form below and our team will get back to you as soon as possible.</p>
-</div>
+    <div class="overlay"></div>
+
+    <div class="contact-content">
+        <h1>Contact Us</h1>
+        <p>
+            Have questions or need travel advice?  
+            Our team is here to help you plan the perfect adventure.
+        </p>
+    </div>
 </section>
 
-<!-- ===== CONTACT FORM ===== -->
+<!-- ================= CONTACT FORM ================= -->
 <section class="contact-form-section">
-<form class="contact-form" id="contactForm">
-<label for="name">Full Name</label>
-<input type="text" id="name" name="name" placeholder="Enter your full name" required>
 
-<label for="email">Email Address</label>
-<input type="email" id="email" name="email" placeholder="Enter your email address" required>
+    <form class="contact-form">
+        
+        <label for="name">Your Name</label>
+        <input type="text" id="name" placeholder="Enter your name">
 
-<label for="message">Your Message</label>
-<textarea id="message" name="message" rows="6" placeholder="Write your message here..." required></textarea>
+        <label for="email">Your Email</label>
+        <input type="email" id="email" placeholder="Enter your email">
 
-<button type="submit" class="submit-btn">Submit</button>
-</form>
+        <label for="message">Message</label>
+        <textarea id="message" rows="6" placeholder="Write your message..."></textarea>
+
+        <button class="submit-btn">Send Message</button>
+
+    </form>
+
 </section>
 
-<!-- ===== SOCIAL ICONS ===== -->
-<div class="social-icons">
-<a href="#"><i class="fab fa-facebook-f"></i></a>
-<a href="#"><i class="fab fa-instagram"></i></a>
-<a href="#"><i class="fab fa-twitter"></i></a>
-<a href="#"><i class="fab fa-youtube"></i></a>
-</div>
 </body>
 </html>
